--- a/product-card.html
+++ b/product-card.html
@@ -6,8 +6,29 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-
+<body class="d-flex align-items-center justify-content-center">
+    <div class="mainContainer d-flex justify-content-center align-items-center">
+        <div class="cardContainer">
+            <div class="sneaker d-flex align-items-center justify-content-center">
+                <div class="circle"></div>
+                <img src="img/nike-blue-shoe.png">
+            </div>
+            <div class="info">
+                <h1>Nike React Flyknit</h1>
+                <h3>A RUNNER'S CHOICE</h3>
+                <h3>EXPERIENCE THE COMFORT</h3>
+                <div class="sizes d-flex justify-content-between">
+                    <button>9</button>
+                    <button class="active">10</button>
+                    <button>11</button>
+                    <button>12</button>
+                </div>
+                <div class="purchase">
+                    <button>Purchase</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
