completed core styling elements

--- a/product-card.html
+++ b/product-card.html
@@ -14,8 +14,8 @@
                 <img src="img/nike-blue-shoe.png">
             </div>
             <div class="info">
-                <h1>Nike React Flyknit</h1>
-                <h3>A RUNNER'S CHOICE</h3>
+                <h1>Nike Epic React Flyknit</h1>
+                <h3>A RUNNER'S CHOICE,</h3>
                 <h3>EXPERIENCE THE COMFORT</h3>
                 <div class="sizes d-flex justify-content-between">
                     <button>9</button>
