--- a/product-card.html
+++ b/product-card.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex align-items-center justify-content-center">
-    <div class="mainContainer d-flex justify-content-center align-items-center">
+    <div class="mainContainer d-flex justify-content-center align-items-center" style="height: 100em;">
         <div class="cardContainer">
             <div class="sneaker d-flex align-items-center justify-content-center">
                 <div class="circle"></div>
