--- a/product-card.html
+++ b/product-card.html
@@ -14,7 +14,7 @@
                 <img src="img/nike-blue-shoe.png">
             </div>
             <div class="info">
-                <h1>Nike Epic React Flyknit</h1>
+                <h1 class="title">Nike Epic React Flyknit</h1>
                 <h3>A RUNNER'S CHOICE,</h3>
                 <h3>EXPERIENCE THE COMFORT</h3>
                 <div class="sizes d-flex justify-content-between">
