--- a/product-card.html
+++ b/product-card.html
@@ -24,7 +24,7 @@
                     <button>12</button>
                 </div>
                 <div class="purchase">
-                    <button>Purchase</button>
+                    <button class="purchaseText">Purchase</button>
                 </div>
             </div>
         </div>
