resized the card

--- a/product-card.html
+++ b/product-card.html
@@ -15,16 +15,15 @@
             </div>
             <div class="info">
                 <h1 class="title">Nike Epic React Flyknit</h1>
-                <h3>A RUNNER'S CHOICE,</h3>
-                <h3>EXPERIENCE THE COMFORT</h3>
-                <div class="sizes d-flex justify-content-between">
+                <h3>A RUNNER'S CHOICE, <br>EXPERIENCE THE COMFORT</h3>
+                <div class="sizes d-flex justify-content-center">
                     <button>9</button>
                     <button class="active">10</button>
                     <button>11</button>
                     <button>12</button>
                 </div>
                 <div class="purchase">
-                    <button class="purchaseText">Purchase</button>
+                    <button class="purchaseButton">Purchase</button>
                 </div>
             </div>
         </div>
