--- a/product-card.html
+++ b/product-card.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Product Card</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/1e8ed50084.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex align-items-center justify-content-center">
@@ -16,14 +17,14 @@
             <div class="info">
                 <h1 class="title">Nike Epic React Flyknit</h1>
                 <h3>A RUNNER'S CHOICE, <br>EXPERIENCE THE COMFORT</h3>
-                <div class="sizes d-flex justify-content-center">
+                <div class="sizes d-flex justify-content-around">
                     <button>9</button>
                     <button class="active">10</button>
                     <button>11</button>
                     <button>12</button>
                 </div>
                 <div class="purchase">
-                    <button class="purchaseButton">Purchase</button>
+                    <button class="purchaseText">Add to cart<i class="fas fa-shopping-cart"></i></button>
                 </div>
             </div>
         </div>
